# MBDCC-AGENTIC-IA-TP-PROF-SARA-RETAL

./: .gitignore  README.md  main.py  pyproject.toml
tp04-MCP/: README.md  agentMCP.py  agentMCPTime.py  agentMCPTravel.py
tp04-MCP/resources/: mcp_local_server.py
tp1-Ingenierie-prompts/: README.md  prompt.ipynb
tp2-Agents-Langchain/: README.md  agent-langchain.ipynb
tp3-RAG-AGENTIC/: README.md  rag.ipynb
