[project]
name = "tpbdcc-agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.2",
    "sentence-transformers>=5.5.1",
    "tavily>=1.1.0",
    "tiktoken>=0.13.0",
]
